# CommonsenseQA-translation

./: .env.example  .gitignore  CLAUDE.md  README.md  RESULTS.md  presentation_brief.md  pyproject.toml  requirements.txt
.claude/: README.md  settings.json
.claude/skills/analyzer/: SKILL.md
.claude/skills/cluster-ops/: SKILL.md
cluster/: defaults.sh  serve_and_eval.sbatch  submit.sh
configs/: consensus.yaml  default.yaml  gemini.yaml  nllb.yaml  nllb33.yaml  opus.yaml
paper/: README.md  main.tex  references.bib
paper/sections/: appendix.tex  conclusion.tex  experiments.tex  introduction.tex  methods.tex  related_work.tex
report/: README.md  build_report.py
results/: flips.csv  summary.csv  translation_ensemble.csv
results/Qwen3.5-0.8B/en-en__en__think-off__48bd1ee8/: manifest.json
results/Qwen3.5-0.8B/en-x__es__think-off__54a16edd/: outputs.jsonl
results/Qwen3.5-0.8B/en-x__ru__think-off__a8669a36/: outputs.jsonl
results/predictions/: README.md
scripts/: README.md  __init__.py  _analysis_io.py  analyze.py  build_consensus.py  build_deck.py  build_mt.py  build_variants.py  hebrew_gallery.py  import_translations.py  ingest_subagent.py  make_tables.py  plots.py  reparse_check.py  run_eval.py  translate.py  translation_agreement.py  translation_ensemble.py
src/csqa_xlang/: __init__.py  config.py  manifest.py
tasks/mixed_answers/: README.md  analyze_mixed.py  build_mixed.py  mixed_by_gold_lang.csv  mixed_flips.csv  mixed_summary.csv  plot_mixed.py  run_mixed.py
training/xlmr_csqa/: README.md  make_split.py  train.py
(+154 files in other folders)
