[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "csqa_xlang"
version = "0.0.1"
description = "Answer-side translation study on CommonsenseQA"
requires-python = ">=3.10"
# Runtime deps are tracked in requirements.txt while backends are still pluggable.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

# Install editable so `import csqa_xlang` works from anywhere:  pip install -e .

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
